# Turbit-coding-task

./: .gitignore  README.md  docker-compose.yml  tasks.txt
task1/: .env  README.md  pyproject.toml
task1/src/: data_fetcher.py  db.py  http_client.py  main.py  models.py  pipeline.py  schemas.py  services.py
task2/: .env  README.md
task2/backend/: pyproject.toml
task2/backend/data/: Turbine2.csv
task2/backend/src/: data_parser.py  db.py  main.py  models.py  schemas.py
task2/frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
task2/frontend/src/: App.tsx
task2/frontend/src/components/: CurvePlot.tsx  DatePicker.tsx  PowerCurvePlot.tsx  TurbineInput.tsx
task2/frontend/src/components/ui/: calendar.tsx
task2/frontend/src/hooks/: useDateRange.tsx  useTurbineId.tsx
